--- a/index.html
+++ b/index.html
@@ -389,19 +389,20 @@
       <h2 id="faq">FAQ</h2>
       <p><strong>Are that many colors really necessary?</strong><br>
          No, absolutely not. Some of them are in fact completely ludicrous.<br>
-         For example if you know any language in which <em>static async enum members</em> are a thing I would love to see it. On the bright side, that means that not every single color needs to be the most beautiful tone, and that I don&#39;t need to worry about the contrast between some of the colors if one of them is a super weird or even impossible edge case.</p>
+         For example if you know any language in which <em>static async enum members</em> are a thing I would love to see it. On the bright side, that means that not every single color needs to be the most beautiful tone, and also that I don&#39;t need to worry about the contrast between some of the colors if one of them is a super weird or even impossible edge case.</p>
       <p><strong>Some of those colors seem pretty close to each other, is it really possible to tell them apart?</strong><br>
-         It is true that some colors would be hard to distinguish in <em>isolation</em> but in actual code tokens are literally surrounded by context. You&#39;d be surprised how many slight differences you pick up subconsciously after a while.</p>
+         It is true that some colors would be hard to distinguish in <em>isolation</em> but in the actual code tokens are literally surrounded by context. You&#39;d be surprised how many slight differences you pick up subconsciously after a while.</p>
       <p><strong>But some of them seem pretty much identical?</strong><br>
          That would be the declaration styles. That&#39;s because they are mainly differentiated from other tokens by being shown in <em>italics</em>.</p>
       <p><strong>Which languages are used to test this Theme?</strong><br>
-         A: I am mainly testing in TypeScript, Python, CSS/SCSS and HTML. I am not opposed to include other languages in the future.</p>
+         I am mainly testing in TypeScript, Python, Lua, CSS/SCSS and HTML. I am not opposed to include other languages in the future.
+      </p>
       <p><strong>I can&#39;t get the private token modifier in TypeScript to work, am I doing something wrong?</strong><br>
-         No, the private modifier isn&#39;t implemented in the Typescript language server yet. The token is included partly just top be future proof and partly because other language servers might already support it.</p>
+         No, the private modifier isn&#39;t implemented in the Typescript language server yet. The token is included partly just top be future proof and partly because other language servers are already supporting it (Java for example).</p>
       <hr>
       <h2 id="design-philosophy">Design Philosophy</h2>
       <p>I am not going to pretend that I went into this project with a definite concept and a background in color psychology. Many of these color associations emerged basically on their own as I was tweaking colors back and forth and later I went back to figure out <em>how</em> they might work.<br>
-         The key to making a Theme with this many colors work without things getting too confusing is to create a spectrum in which colors, rather than arbitrarily representing keywords instead represent different concepts and roles, and based on this spectrum colors are assigned to the different tokens.</p>
+         The key to making a Theme with this many colors work without things getting too confusing is to create a spectrum in which colors do not arbitrarily representi keywords but instead represent different concepts and roles in the program, and based on this spectrum colors are assigned to the different tokens.</p>
       <p>The spectrum that emerged for this particular theme is the following:</p>
       <h3 id="red-valuesinformation"><strong class="variable_readonly">Red:</strong> Values/Information</h3>
       <h3 id="purple-keywordsflow-control"><strong class="macro_static">Purple:</strong> Keywords/Flow Control</h3>
