Link to site in readme and template

--- a/index.html
+++ b/index.html
@@ -401,7 +401,8 @@
          No, the private modifier isn&#39;t implemented in the Typescript language server yet. The token is included partly just top be future proof and partly because other language servers are already supporting it (Java for example).</p>
       <hr>
       <h2 id="design-philosophy">Design Philosophy</h2>
-      <p>I am not going to pretend that I went into this project with a definite concept and a background in color psychology. Many of these color associations emerged basically on their own as I was tweaking colors back and forth and later I went back to figure out <em>how</em> they might work.<br>
+      <p>First off, <a href="https://www.modal-marginalia.com/post/1-syntax-highlighting-and-focus">here is why I generally think this theme might work for you.</a></p>
+      <p>As for the colors themselves, I am not going to pretend that I went into this project with a definite concept and a background in color psychology. Many of these color associations emerged basically on their own as I was tweaking colors back and forth and later I went back to figure out <em>how</em> they might work.<br>
          The key to making a Theme with this many colors work without things getting too confusing is to create a spectrum in which colors do not arbitrarily representi keywords but instead represent different concepts and roles in the program, and based on this spectrum colors are assigned to the different tokens.</p>
       <p>The spectrum that emerged for this particular theme is the following:</p>
       <h3 id="red-valuesinformation"><strong class="variable_readonly">Red:</strong> Values/Information</h3>
